--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ output
 /Librerias/hx710B_pressure_sensor-main
 /Librerias/LiquidCrystal
 /Librerias/OneWire
+
+*.md
+!3-estructura-software.md
+Documentacion/Presupuesto/PRO-20250424-001.html
+Documentacion/Presupuesto/Proforma_PRO-ITS-20250424-221.pdf
