--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-.vscode
+# .vscode
 output
 /Librerias/Adafruit_BusIO-master
 /Librerias/Arduino-AsyncTask-master
@@ -8,7 +8,6 @@ output
 /Librerias/LiquidCrystal
 /Librerias/OneWire
 
-*.md
+# *.md
 !3-estructura-software.md
-Documentacion/Presupuesto/PRO-20250424-001.html
-Documentacion/Presupuesto/Proforma_PRO-ITS-20250424-221.pdf
+Documentacion/Presupuesto/
