Implementación del controlador de lavadora industrial
- Se creó la clase ActuatorsClass para gestionar actuadores como motores, válvulas y zumbadores.
- Se desarrolló el controlador de programas (ProgramControllerClass) para manejar la lógica de ejecución de programas de lavado, incluyendo la gestión de fases y temporizadores.
- Se implementó la clase SensorsClass para la lectura y monitoreo de sensores de temperatura y presión.
- Se añadió la clase StorageClass para la gestión de almacenamiento en EEPROM, permitiendo guardar y cargar configuraciones de programas.
- Se creó la clase UtilsClass para utilidades generales, incluyendo manejo de temporizadores y funciones de depuración.
- Se implementó la lógica de emergencia para detener el sistema en caso de fallos.
- Se estableció la estructura del archivo principal (automLavanderia_v1.ino) para inicializar y gestionar los módulos del sistema.

--- a/.gitignore
+++ b/.gitignore
@@ -11,4 +11,5 @@ output
 # *.md
 !3-estructura-software.md
 Documentacion/Presupuesto/
-Documentacion/Analisis de código/
+Documentacion/Analisis-de-codigo/
+Documentacion/Librerias/
