Implement modular architecture for industrial washing machine controller
- Created mainController.ino to manage the overall system.
- Integrated modules for hardware, utilities, storage, sensors, actuators, UI, and program control.
- Added emergency button handling and welcome screen display.
- Initialized system components in setup and managed main loop operations.
- Implemented asynchronous task handling for UI transitions.

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ output
 Documentacion/Presupuesto/
 Documentacion/Analisis-de-codigo/
 Documentacion/Librerias/
+automLavanderia_v1/automLavanderia_v1.ino
