Actualiza la gestión de almacenamiento para usar Preferences en lugar de EEPROM y ajusta las inclusiones de librerías en varios archivos.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ output
 /Librerias/Arduino-AsyncTask-master
 /Librerias/DallasTemperature
 /Librerias/EEPROM
+/Librerias/Hardware-Serial
 /Librerias/hx710B_pressure_sensor-main
 /Librerias/LiquidCrystal
 /Librerias/OneWire
