Configuracion pantallas nextion actualizado
Add documentation for Nextion communication and screen design for industrial washer controller

- Created Nextion_Comunicacion.md detailing the communication protocol, hardware setup, and modular structure for ESP32 and Nextion screen interaction.
- Created Nextion_Pantallas.md providing a comprehensive guide for designing Nextion screens, including layout, components, and event handling for various operational pages.

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ Documentacion/Presupuesto/
 Documentacion/Analisis-de-codigo/
 Documentacion/Librerias/
 automLavanderia_v1/automLavanderia_v1.ino
+Nextion/hmi-controlador-lavadora-socabaya.HMI
+Nextion/fonts/Arial24Bold.zi
+Nextion/fonts/ArialBlanco24Bold.zi
